--- a/src/components/Rows.css
+++ b/src/components/Rows.css
@@ -1,9 +1,10 @@
 .poster-scroll {
     overflow-x: scroll;
-    overflow-y: hidden;
+    /* overflow-y: hidden; */
     flex-wrap: nowrap !important;
     margin: 0 20px !important;
-    height: 250px;
+    height: 300px;
+    align-items: center;
 }
 
 .poster-scroll::-webkit-scrollbar {
@@ -11,12 +12,13 @@
 }
 
 .poster {
-    margin: 20px 10px;
+    margin: 0 20px;
     border: none !important;
-    height: 200px;
+    height: 250px;
     min-width: 140px !important;
-    width: 100%;
     transition: 300ms;
+    width: auto !important;
+    padding: 0 !important;
 }
 
 .poster:hover {
